Prettier and now with registration

--- a/app/assets/stylesheets/minimal.scss
+++ b/app/assets/stylesheets/minimal.scss
@@ -78,3 +78,11 @@ div.gradient-container {
   border-color: #e16e2f;
   color: #fff;
 }
+
+a, a:visited {
+  color: #e16e2f;
+}
+
+a:hover {
+  color: #c14e0f;
+}
