--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,78 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-fixed-top navbar-toggleable-sm navbar-inverse bg-purple mb-3">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsing-navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand pb-2" href="#">Authify</a>
+      <div class="navbar-collapse collapse" id="collapsing-navbar">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"><%= icon :home %> Home <span class="sr-only">Home</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#myAlert" data-toggle="collapse">Wow</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <%= link_to icon(:user), me_path, class: 'nav-link' %>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container-fluid" id="main">
+      <div class="row row-offcanvas row-offcanvas-left">
+        <div class="col-md-3 col-lg-2 sidebar-offcanvas" id="sidebar" role="navigation">
+          <ul class="nav flex-column">
+            <li class="nav-item"><a class="nav-link" href="#">Overview</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Reports</a></li>
+            <li class="nav-item"><%= link_to users_path, class: 'nav-link' do %><%= icon :users %> Users<% end %></li>
+            <li class="nav-item"><a class="nav-link" href="">Organizations</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Integrations</a></li>
+            <li class="nav-item"><a class="nav-link" href="" data-target="#about" data-toggle="modal">About</a></li>
+          </ul>
+        </div>
+        <!--/col-->
+        <div class="col-md-9 col-lg-10 main">
+          <!--toggle sidebar button-->
+          <p class="hidden-md-up">
+              <button type="button" class="btn btn-primary-outline btn-sm" data-toggle="offcanvas"><i class="fa fa-chevron-left"></i> Menu</button>
+          </p>
+          <h1 class="display-1 hidden-xs-down"><%= content_for :subject %></h1>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+    <!--/.container-->
+    <footer class="container-fluid">
+        <p class="text-right small">©2017 KnuEdge</p>
+    </footer>
   </body>
+  <!-- About Modal -->
+  <div class="modal fade" id="about" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+            <span class="sr-only">Close</span>
+          </button>
+          <h4 class="modal-title" id="myModalLabel">Modal</h4>
+        </div>
+        <div class="modal-body">
+          Authify Web Service
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary-outline" data-dismiss="modal">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </html>
