--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,23 +20,16 @@
       </button>
       <a class="navbar-brand pb-2" href="#">Authify</a>
       <div class="navbar-collapse collapse" id="collapsing-navbar">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"><%= icon :home %> Home <span class="sr-only">Home</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#features">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#myAlert" data-toggle="collapse">Wow</a>
-          </li>
-        </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <%= link_to icon(:user), me_path, class: 'nav-link' %>
+            <%= link_to me_path, class: 'nav-link' do %>
+              <%= icon 'user' %> Profile
+            <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to icon('sign-out'), logout_path, method: :delete, class: 'nav-link' %>
+            <%= link_to logout_path, method: :delete, class: 'nav-link' do %>
+              <%= icon 'sign-out' %> Logoff
+            <% end %>
           </li>
         </ul>
       </div>
@@ -45,12 +38,12 @@
       <div class="row row-offcanvas row-offcanvas-left">
         <div class="col-md-3 col-lg-2 sidebar-offcanvas" id="sidebar" role="navigation">
           <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="#">Overview</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Reports</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><%= icon 'tachometer' %> Overview</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><%= icon 'line-chart' %> Reports</a></li>
             <li class="nav-item"><%= link_to users_path, class: 'nav-link' do %><%= icon :users %> Users<% end %></li>
-            <li class="nav-item"><a class="nav-link" href="">Organizations</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Integrations</a></li>
-            <li class="nav-item"><a class="nav-link" href="" data-target="#about" data-toggle="modal">About</a></li>
+            <li class="nav-item"><a class="nav-link" href=""><%= icon 'sitemap' %> Organizations</a></li>
+            <li class="nav-item"><a class="nav-link" href=""><%= icon 'plug' %> Integrations</a></li>
+            <li class="nav-item"><a class="nav-link" href="" data-target="#about" data-toggle="modal"><%= icon 'question-circle' %> About</a></li>
           </ul>
         </div>
         <!--/col-->
