--- a/app/views/users/_new_api_key.js.erb
+++ b/app/views/users/_new_api_key.js.erb
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <%= link_to "Close", '#', class: "btn" %>
+      <%= link_to "Close", me_path, class: "btn", data: { no_turbolink: true, turbolinks: false } %>
     </div>
   </div>
 </div>
