--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -16,10 +16,19 @@
         Related Identities
       </div>
       <div class="card-block">
-        <div class="list-group">
-          <% @identities.each do |ident| %>
-            <span class="list-group-item"><%= ident.attributes[:provider] %>:<%= ident.attributes[:uid] %></span>
-          <% end %>
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead class="thead-inverse">
+              <tr>
+                <th>Identity Provider</th>
+                <th>UID</th>
+                <th>&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+            <%= render 'identities' %>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -30,12 +39,22 @@
         API Keys
       </div>
       <div class="card-block">
-        <div class="list-group">
-          <%= render 'api_keys' %>
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead class="thead-inverse">
+              <tr>
+                <th>Access Key</th>
+                <th>&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+            <%= render 'api_keys' %>
+            </tbody>
+          </table>
         </div>
         <br>
         <p class="card-text">
-          <%= link_to add_api_key_path, remote: true, method: :post, class: 'btn bg-orange' do %>
+          <%= link_to add_api_key_path, remote: true, method: :post, class: 'btn bg-orange', data: { no_turbolink: true, turbolinks: false } do %>
             <%= icon('plus') %> Add
           <% end %>
         </p>
