--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -30,6 +30,14 @@
             </tbody>
           </table>
         </div>
+        <br>
+        <p class="card-text">
+          <% if github_enabled? && !@identities.map {|i| i.attributes[:provider] }.include?('github') %>
+            <%= link_to '/auth/github', class: 'btn bg-orange' do %>
+              <%= icon('github') %> Add GitHub
+            <% end %>
+          <% end %>
+        </p>
       </div>
     </div>
   </div>
