Working on adding organizations

--- a/app/views/organizations/_list.html.erb
+++ b/app/views/organizations/_list.html.erb
@@ -1,5 +1,6 @@
           <% @organizations.each do |org| %>
             <tr>
                 <td><%= org.name %></td>
+                <td>&nbsp;</td>
             </tr>
           <% end %>
