--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -23,7 +23,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <%= link_to me_path, class: 'nav-link', data: { no_turbolink: true, turbolinks: false } do %>
-              <%= icon 'user' %> Profile
+              <%= icon 'address-card' %> Profile
             <% end %>
           </li>
           <li class="nav-item">
