--- a/app/views/users/_identities.html.erb
+++ b/app/views/users/_identities.html.erb
@@ -3,9 +3,7 @@
             <td><%= icon ident.attributes[:provider] %> <%= ident.attributes[:provider] %></td>
             <td><%= ident.attributes[:uid] %></td>
             <td>
-              <%= link_to '#' do %>
-                <%= icon('trash') %>
-              <% end %>
+              &nbsp;
             </td>
           </tr>
           <% end %>
